Sigil v0.4.1 DATE_TBA
    - Fix issue 976: Creation of new Code View tab fails to show all content if the web page's 
      asynchronous loading is delayed.
    - Fix an issue where the line numbers in code view were not aligned to the line they represent.
    - Fix issue 871: Update heading combo when putting cursor on block with heading style.
    - Fix the formation of an empty paragraph at the top of the new file on doing a chapter split
      in Book View.
    - Fix issue 967: toc.ncx file keeps erasing manual input.
    - Fix issues 657, 661, 694 and 867: The Heading Selector in Book View will now function as
      expected and find the correct block-level tag to change rather than attempting to change
      inline tags. It will also retain the attributes (including class) of the old tag.
    - Fix the entity display for shy, mdash and ndash.
    - Set modified state on book when page order is changed.
    - Fixed the cursor issues on moving from Book to Code View and vice-versa. The new view should
      now always gain keyboard focus and show the cursor properly.
    - Insert the xml tag explicitly so that Tidy doesn't insert one without encoding and standalone
      attributes.
    - Fix issue #877: Invalid xml error prevents Find/Replace window from opening.
    - Fix issue where switching between code and book view causes the code view to load old data
      from book view.
    - Fix issue 364: Go to line #.
    - Fix issue 742: Shortcut/menu action to close all tabs except the current one.
    - Fix issue 959: Original creator's name is mangled in About dialog.
    - Fix for chapter splitting issue involving filenames with spaces.
    - Makes sure the cursor is properly displayed on entering Code View.

Sigil v0.4.0 2011.08.15
    - Fix issue 650: Convert SVG prefixes into a form that Tidy will tolerate.
    - Fix issue 952: Allow compatible extension changes.
    - Fix issue 835: File, Close shortcut does not work on OS X due to shortcut conflict.